added SSH functionality to the image

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,8 @@ variables:
   containerRegistry: 'ansalemocontainerregistry.azurecr.io'
   dockerfilePath: './Dockerfile'
   tag: '$(Build.BuildId)'
+  webApp: 'pythonazuredevopscontainerized'
+  azureSubscription: '4388fa06-bf66-4497-82c2-991ba75ecb97'
 
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
@@ -37,3 +39,19 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
+- stage: Deploy
+  displayName: Azure App Service Deploy
+  jobs: 
+  - job: Deploy
+    displayName: Deploy
+    steps:
+    - task: AzureRMWebAppDeployment@4
+      displayName: Azure App Service Deploy
+      inputs:
+        appType: webAppContainer
+        ConnectedServiceName: $(azureSubscription)   
+        WebAppName: $(webApp)
+        DockerNamespace: $(containerRegistry) 
+        DockerRepository: $(imageRepository) 
+        DockerImageTag: $(tag)
+
