--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ flask-pymongo = "*"
 dnspython = "*"
 python-dotenv = "*"
 gunicorn = "*"
+flask-swagger-ui = "*"
 
 [requires]
 python_version = "3.8"
