Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,10 +50,11 @@ stages:
         ConnectionType: 'AzureRM'
         azureSubscription: 'Ansalemo(4388fa06-bf66-4497-82c2-991ba75ecb97)'
         appType: 'webAppContainer'
-        AppSettings: '-WEBSITES_PORT 8000'
+        AppSettings: '-WEBSITES_PORT 8000 -WEBSITE_HTTPLOGGING_RETENTION_DAYS 10'
         WebAppName: $(webApp)
         DockerNamespace: $(containerRegistry) 
         DockerRepository: $(imageRepository) 
         DockerImageTag: $(tag)
+
 
 
