Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,6 +39,13 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
+    - task: AzureCLI@2
+      inputs:
+        azureSubscription: 'Ansalemo(4388fa06-bf66-4497-82c2-991ba75ecb97)'
+        scriptType: 'bash'
+        scriptLocation: 'inlineScript'
+        inlineScript: 'az webapp log config --name "Python-AzureDevOps-Containerized" --resource-group "ansalemo-rg" --docker-container-logging filesystem'
+
 - stage: Deploy
   displayName: Azure App Service Deploy
   jobs: 
@@ -50,7 +57,7 @@ stages:
         ConnectionType: 'AzureRM'
         azureSubscription: 'Ansalemo(4388fa06-bf66-4497-82c2-991ba75ecb97)'
         appType: 'webAppContainer'
-        AppSettings: '-WEBSITES_PORT 8000 -WEBSITE_HTTPLOGGING_RETENTION_DAYS 10 -HTTP_LOGGING_ENABLED 1'
+        AppSettings: '-WEBSITES_PORT 8000 -WEBSITE_HTTPLOGGING_RETENTION_DAYS 5'
         WebAppName: $(webApp)
         DockerNamespace: $(containerRegistry) 
         DockerRepository: $(imageRepository) 
